cabal-version:      3.0
name:               wireform
version:            0.1.0.0
synopsis:           High-performance multi-format serialization toolkit for Haskell
description:
  A comprehensive binary serialization library supporting 16 formats:
  .
  * Protocol Buffers (proto2/proto3 with full IDL parser, code generation, JSON mapping)
  * Apache Avro (schema resolution, JSON conversion, protocol/IPC)
  * Apache Thrift (binary protocol, schema, JSON)
  * CBOR (RFC 7049 values, encoding/decoding, JSON bridge)
  * MessagePack (values, encoding/decoding, JSON bridge)
  * BSON (MongoDB wire format)
  * Amazon Ion (binary Ion values)
  * Cap'n Proto (zero-copy serialization)
  * FlatBuffers (zero-copy flat serialization)
  * Microsoft Bond (compact binary)
  * ASN.1 BER/DER (ITU-T X.690)
  * Apache Parquet (columnar metadata/footer)
  * Apache Arrow IPC (in-memory columnar)
  * Apache Iceberg (table metadata/manifests)
  * Python Pickle (opcodes 0–5)
  * EDN (Extensible Data Notation)

license:            BSD-3-Clause
homepage:           https://github.com/iand675/wireform-
bug-reports:        https://github.com/iand675/wireform-/issues
build-type:         Simple
tested-with:        GHC == 9.6.4, GHC == 9.8.4
extra-source-files: CHANGELOG.md

data-files:
  proto/google/protobuf/any.proto
  proto/google/protobuf/api.proto
  proto/google/protobuf/duration.proto
  proto/google/protobuf/empty.proto
  proto/google/protobuf/field_mask.proto
  proto/google/protobuf/source_context.proto
  proto/google/protobuf/struct.proto
  proto/google/protobuf/timestamp.proto
  proto/google/protobuf/type.proto
  proto/google/protobuf/wrappers.proto

data-dir: .

source-repository head
  type:     git
  location: https://github.com/iand675/wireform-

flag python-interop
  description: Enable Python interop conformance tests (requires python3, protobuf pip package, protoc)
  manual: True
  default: False

common warnings
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wpartial-fields
      -Wredundant-constraints
      -O2

library
    import:           warnings
    exposed-modules:
      Proto.AST
      Proto.Parser
      Proto.Parser.Lexer
      Proto.Parser.Error
      Proto.Parser.Resolver
      Proto.Wire
      Proto.Wire.Encode
      Proto.Wire.Decode
      Proto.Encode
      Proto.Decode
      Proto.Annotations
      Proto.CodeGen
      Proto.CodeGen.Combinators
      Proto.CodeGen.Types
      Proto.CodeGen.Encode
      Proto.CodeGen.Decode
      Proto.SizedBuilder
      Proto.Church
      Proto.VectorBuilder
      Proto.Message
      Proto.Schema
      Proto.Lens
      Proto.Repr
      Proto.Compat
      Proto.Options
      Proto.Print
      Proto.Inspect
      Proto.Setup
      Proto.TH
      Proto.QQ
      Proto.JSON
      Proto.Merge
      Proto.FieldPresence
      -- Well-known types (generated from proto/google/protobuf/*.proto)
      Proto.Google.Protobuf.Any
      Proto.Google.Protobuf.Any.Util
      Proto.Google.Protobuf.Timestamp
      Proto.Google.Protobuf.Duration
      Proto.Google.Protobuf.Empty
      Proto.Google.Protobuf.Wrappers
      Proto.Google.Protobuf.FieldMask
      Proto.Google.Protobuf.SourceContext
      Proto.Google.Protobuf.Struct
      Proto.Registry
      Proto.Registry.TH
      -- New modules
      Proto.Dynamic
      Proto.TDP
      Proto.TextFormat
      Proto.Conformance
      Proto.CodeGen.Service
      Proto.CodeGen.Hooks
      Proto.JSON.WellKnown
      Proto.Options.Custom
      Proto.Google.Protobuf.Descriptor
      Proto.Google.Protobuf.Compiler.Plugin
      Proto.Descriptor.Convert
      Proto.Internal.Maybe
      Proto.Internal.Either
      Proto.Wire.Result
      Proto.Wire.FFI
      Proto.Decode.Stream
      Proto.Decode.Streaming
      Proto.Decode.Fast
      Proto.Encode.Lazy
      Proto.Encode.Archetype
      Proto.Encode.Direct
      Avro.Wire
      Avro.Schema
      Avro.Value
      Avro.Encode
      Avro.Decode
      Avro.JSON
      Avro.Resolution
      Avro.Container
      Avro.Schema.Parse
      -- Well-known type utilities
      Proto.Google.Protobuf.Timestamp.Util
      Proto.Google.Protobuf.Duration.Util
      Proto.Google.Protobuf.FieldMask.Util
      Proto.Google.Protobuf.Wrappers.Util
      Proto.Google.Protobuf.Struct.Util
      -- Thrift support
      Thrift.Wire
      Thrift.Schema
      Thrift.Value
      Thrift.Encode
      Thrift.Decode
      Thrift.JSON
      Thrift.Message
      Thrift.Parser
      Thrift.CodeGen
      Thrift.Registry
      Thrift.QQ
      -- Avro code generation
      Avro.CodeGen
      Avro.Registry
      Avro.QQ
      -- gRPC framing
      Proto.GRPC
      -- Avro IDL (.avdl) parser and converter
      Avro.IDL
      Avro.IDLConvert
      -- Avro Protocol / IPC
      Avro.Protocol
      -- CBOR support
      CBOR.Value
      CBOR.Encode
      CBOR.Decode
      CBOR.JSON
      CBOR.Diagnostic
      CBOR.Stream
      CBOR.CDDLSchema
      CBOR.CDDL
      CBOR.CDDLCodeGen
      CBOR.TagRegistry
      CBOR.QQ
      -- MessagePack support
      MsgPack.Value
      MsgPack.Encode
      MsgPack.Decode
      MsgPack.JSON
      MsgPack.RPC
      MsgPack.Stream
      -- BSON support
      BSON.Value
      BSON.Encode
      BSON.Decode
      -- Amazon Ion support
      Ion.Value
      Ion.Encode
      Ion.Decode
      Ion.ISLSchema
      Ion.SchemaLang
      Ion.ISLCodeGen
      Ion.QQ
      -- Cap'n Proto support
      CapnProto.Value
      CapnProto.Encode
      CapnProto.Decode
      CapnProto.Schema
      CapnProto.Parser
      CapnProto.CodeGen
      CapnProto.Registry
      CapnProto.QQ
      -- FlatBuffers support
      FlatBuffers.Value
      FlatBuffers.Encode
      FlatBuffers.Decode
      FlatBuffers.Schema
      FlatBuffers.Parser
      FlatBuffers.CodeGen
      FlatBuffers.Registry
      FlatBuffers.QQ
      -- Apache Iceberg table metadata
      Iceberg.Types
      Iceberg.JSON
      Iceberg.Manifest
      -- Microsoft Bond support
      Bond.Value
      Bond.Encode
      Bond.Decode
      Bond.Schema
      Bond.Parser
      Bond.CodeGen
      Bond.Registry
      Bond.QQ
      -- ASN.1 BER/DER support
      ASN1.Value
      ASN1.Encode
      ASN1.Decode
      ASN1.Schema
      ASN1.Parser
      ASN1.CodeGen
      ASN1.QQ
      -- Apache Parquet metadata
      Parquet.Types
      Parquet.Footer
      -- Python Pickle support
      Pickle.Value
      Pickle.Encode
      Pickle.Decode
      -- Apache Arrow IPC
      Arrow.Types
      Arrow.IPC
      -- EDN (Extensible Data Notation) support
      EDN.Value
      EDN.Encode
      EDN.Decode
      EDN.JSON
      -- Typeclass-based encode/decode with Generic deriving
      MsgPack.Class
      CBOR.Class
      BSON.Class
      EDN.Class
      Ion.Class
      Avro.Class
      Thrift.Class
      -- Convenience re-export modules
      Wireform.MsgPack
      Wireform.CBOR
      Wireform.Avro
      Wireform.Thrift
      Wireform.EDN
      Wireform.BSON
      Wireform.Ion
      Wireform.Bond
      Wireform.Proto
      Wireform.CapnProto
      Wireform.FlatBuffers
      Wireform.ASN1
      Wireform.Pickle
      -- XML support
      XML.Value
      XML.SAX
      XML.Decode
      XML.Encode
      XML.Path
      XML.Class
      XML.Generic
      XML.Schema
      XML.CodeGen
      XML.QQ
      XML.DSL
      Wireform.XML

    other-modules:    Paths_wireform
    autogen-modules:  Paths_wireform

    c-sources:        cbits/fast_decode.c
                      cbits/fast_xml.c
    include-dirs:     cbits/simde
    cc-options:       -O3 -march=native

    build-depends:
        base             >= 4.16   && < 5
      , bytestring       >= 0.11   && < 0.13
      , containers       >= 0.6    && < 0.8
      , megaparsec       >= 9.0    && < 10
      , text             >= 2.0    && < 2.2
      , vector           >= 0.13   && < 0.14
      , primitive         >= 0.7    && < 0.10
      , mtl              >= 2.2    && < 2.4
      , filepath         >= 1.4    && < 1.6
      , directory        >= 1.3    && < 1.4
      , deepseq          >= 1.4    && < 1.6
      , template-haskell >= 2.18   && < 2.24
      , prettyprinter    >= 1.7    && < 1.8
      , base16-bytestring >= 1.0  && < 1.1
      , base64-bytestring >= 1.2  && < 1.3
      , aeson             >= 2.1  && < 2.3
      , scientific        >= 0.3  && < 0.4
      , hashable          >= 1.3  && < 1.6
      , unordered-containers >= 0.2.16 && < 0.3
      , time              >= 1.9    && < 1.15
      , cryptohash-md5    >= 0.11   && < 0.12
      , zlib              >= 0.6    && < 0.8

    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      DeriveGeneric
      DeriveAnyClass
      OverloadedStrings
      LambdaCase

test-suite wireform-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
      Test.Parser
      Test.Wire
      Test.Roundtrip
      Test.CodeGen
      Test.WellKnown
      Test.WellKnownUtil
      Test.PrintInspect
      Test.Compat
      Test.Schema
      Test.Options
      Test.Lens
      Test.StreamCodec
      Test.JSON
      Test.Hooks
      Test.TDP
      Test.Thrift
      Test.Avro
      Test.GRPC
      Test.CBOR
      Test.MsgPack
      Test.BSON
      Test.Ion
      Test.CapnProto
      Test.FlatBuffers
      Test.Iceberg
      Test.Bond
      Test.ASN1
      Test.Parquet
      Test.Pickle
      Test.Arrow
      Test.EDN
      Test.MsgPackRPC
      Test.CBORDiagnostic
      Test.Streaming
      Test.Class
      Test.AvroContainer
      Test.ThriftParser
      Test.AvroSchemaParse
      Test.BondParser
      Test.AvroCodeGen
      Test.ThriftCodeGen
      Test.BondCodeGen
      Test.CapnProtoCodeGen
      Test.FlatBuffersCodeGen
      Test.ASN1CodeGen
      Test.CDDLCodeGen
      Test.ISLCodeGen
      Test.Resolver
      Test.CapnProtoParser
      Test.FlatBuffersParser
      Test.ASN1Parser
      Test.CDDLParser
      Test.ISLParser
      Test.AvroIDL
      Test.Registry
      Test.XML

    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , containers
      , text
      , vector
      , aeson
      , hashable
      , unordered-containers
      , time
      , filepath
      , directory
      , hedgehog         >= 1.0  && < 1.5
      , tasty            >= 1.4  && < 1.6
      , tasty-hedgehog   >= 1.0  && < 1.5
      , tasty-hunit      >= 0.10 && < 0.11

    hs-source-dirs:   test
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      DeriveGeneric
      DeriveAnyClass
      OverloadedStrings

executable wireform-gen
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base                 >= 4.16 && < 5
      , wireform
      , text
      , containers
      , vector
      , directory
      , filepath
      , optparse-applicative >= 0.17 && < 0.20

    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-basic
    import:           warnings
    main-is:          BasicEncodeDecode.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , text
      , deepseq
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-any
    import:           warnings
    main-is:          AnyExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , text
      , deepseq
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-wellknown
    import:           warnings
    main-is:          WellKnownTypes.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , containers
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-codegen
    import:           warnings
    main-is:          ProtoCodeGen.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , text
      , containers
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings
      LambdaCase

executable example-setup-hook
    import:           warnings
    main-is:          ExampleSetup.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , text
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-custom-repr
    import:           warnings
    main-is:          CustomReprExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , text
      , containers
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-th
    import:           warnings
    main-is:          THExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , text
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-qq
    import:           warnings
    main-is:          QQExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-msgpack
    import:           warnings
    main-is:          MsgPackExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-cbor
    import:           warnings
    main-is:          CBORExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-avro
    import:           warnings
    main-is:          AvroExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-thrift
    import:           warnings
    main-is:          ThriftExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-edn
    import:           warnings
    main-is:          EDNExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-bson
    import:           warnings
    main-is:          BSONExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-ion
    import:           warnings
    main-is:          IonExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-capnproto
    import:           warnings
    main-is:          CapnProtoExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-flatbuffers
    import:           warnings
    main-is:          FlatBuffersExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-iceberg
    import:           warnings
    main-is:          IcebergExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , containers
      , vector
      , aeson
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-bond
    import:           warnings
    main-is:          BondExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-asn1
    import:           warnings
    main-is:          ASN1Example.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-parquet
    import:           warnings
    main-is:          ParquetExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-pickle
    import:           warnings
    main-is:          PickleExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-arrow
    import:           warnings
    main-is:          ArrowExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , vector
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable example-protobuf
    import:           warnings
    main-is:          ProtobufExample.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
    hs-source-dirs:   examples
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

test-suite conformance-self-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , vector
    hs-source-dirs:   test-conformance
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable bench-grow
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , vector

    hs-source-dirs:   bench-grow
    default-language: GHC2021
    default-extensions:
      StrictData

executable wireform-conformance
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform

    hs-source-dirs:   conformance
    default-language: GHC2021

executable protoc-gen-wireform
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , containers
      , text
      , vector

    hs-source-dirs:   protoc-plugin
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

benchmark compare-bench
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    WireformTypes
                    , Proto.Bench
                    , Proto.Bench_Fields
    build-depends:
        base               >= 4.16 && < 5
      , wireform
      , bytestring
      , text
      , vector
      , deepseq
      , criterion          >= 1.5  && < 1.7
      , proto-lens         >= 0.7  && < 0.8
      , proto-lens-runtime >= 0.7  && < 0.8
      , lens-family        >= 2.1  && < 2.2

    hs-source-dirs:   compare-bench
                    , compare-bench/gen
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      DeriveGeneric
      DeriveAnyClass
      OverloadedStrings

executable gen-wkt
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , containers
      , text
      , directory
      , filepath
    hs-source-dirs:   gen-wkt
    default-language: GHC2021
    default-extensions:
      OverloadedStrings

executable profile
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -O2 -rtsopts
    build-depends:
        base >= 4.16 && < 5
      , wireform
      , bytestring
      , text
      , vector
    hs-source-dirs:   profile
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      OverloadedStrings
      LambdaCase

executable wireform-bench
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , text
      , vector

    hs-source-dirs:   bench
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      OverloadedStrings

executable avro-thrift-bench
    import:           warnings
    main-is:          AvroBench.hs
    ghc-options:      -O2
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , text
      , deepseq
      , vector

    hs-source-dirs:   bench
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      OverloadedStrings

executable all-formats-bench
    import:           warnings
    main-is:          AllFormatsBench.hs
    ghc-options:      -O2
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , text
      , vector

    hs-source-dirs:   bench
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      OverloadedStrings

test-suite python-interop
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    InteropTypes

    if !flag(python-interop)
      buildable: False

    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , text
      , vector
      , containers
      , deepseq
      , process          >= 1.6  && < 1.8
      , hedgehog         >= 1.0  && < 1.5
      , tasty            >= 1.4  && < 1.6
      , tasty-hedgehog   >= 1.0  && < 1.5
      , tasty-hunit      >= 0.10 && < 0.11

    hs-source-dirs:   interop-test
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      OverloadedStrings
      LambdaCase

test-suite temporal-codegen-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
      Proto.Temporalio.Api.Activity.V1.Message
      Proto.Temporalio.Api.Batch.V1.Message
      Proto.Temporalio.Api.Command.V1.Message
      Proto.Temporalio.Api.Common.V1.Message
      Proto.Temporalio.Api.Deployment.V1.Message
      Proto.Temporalio.Api.Enums.V1.Activity
      Proto.Temporalio.Api.Enums.V1.BatchOperation
      Proto.Temporalio.Api.Enums.V1.CommandType
      Proto.Temporalio.Api.Enums.V1.Common
      Proto.Temporalio.Api.Enums.V1.Deployment
      Proto.Temporalio.Api.Enums.V1.EventType
      Proto.Temporalio.Api.Enums.V1.FailedCause
      Proto.Temporalio.Api.Enums.V1.Namespace
      Proto.Temporalio.Api.Enums.V1.Nexus
      Proto.Temporalio.Api.Enums.V1.Query
      Proto.Temporalio.Api.Enums.V1.Reset
      Proto.Temporalio.Api.Enums.V1.Schedule
      Proto.Temporalio.Api.Enums.V1.TaskQueue
      Proto.Temporalio.Api.Enums.V1.Update
      Proto.Temporalio.Api.Enums.V1.Workflow
      Proto.Temporalio.Api.ErrorDetails.V1.Message
      Proto.Temporalio.Api.Export.V1.Message
      Proto.Temporalio.Api.Failure.V1.Message
      Proto.Temporalio.Api.Filter.V1.Message
      Proto.Temporalio.Api.History.V1.Message
      Proto.Temporalio.Api.Namespace.V1.Message
      Proto.Temporalio.Api.Nexus.V1.Message
      Proto.Temporalio.Api.OperatorService.V1.RequestResponse
      Proto.Temporalio.Api.OperatorService.V1.Service
      Proto.Temporalio.Api.Protocol.V1.Message
      Proto.Temporalio.Api.Query.V1.Message
      Proto.Temporalio.Api.Replication.V1.Message
      Proto.Temporalio.Api.Rules.V1.Message
      Proto.Temporalio.Api.Schedule.V1.Message
      Proto.Temporalio.Api.Sdk.V1.EnhancedStackTrace
      Proto.Temporalio.Api.Sdk.V1.TaskCompleteMetadata
      Proto.Temporalio.Api.Sdk.V1.UserMetadata
      Proto.Temporalio.Api.Sdk.V1.WorkerConfig
      Proto.Temporalio.Api.Sdk.V1.WorkflowMetadata
      Proto.Temporalio.Api.TaskQueue.V1.Message
      Proto.Temporalio.Api.Update.V1.Message
      Proto.Temporalio.Api.Version.V1.Message
      Proto.Temporalio.Api.Worker.V1.Message
      Proto.Temporalio.Api.WorkflowService.V1.RequestResponse
      Proto.Temporalio.Api.WorkflowService.V1.Service
      Proto.Temporalio.Api.Workflow.V1.Message
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , aeson
      , bytestring
      , containers
      , deepseq
      , hashable
      , text
      , vector
    hs-source-dirs:   temporal-test
    default-language: GHC2021
    default-extensions:
      StrictData
      DerivingStrategies
      DeriveGeneric
      DeriveAnyClass
      OverloadedStrings
      OverloadedRecordDot
      LambdaCase

benchmark format-bench
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          FormatBench.hs
    build-depends:
        base             >= 4.16 && < 5
      , wireform
      , bytestring
      , text
      , vector
      , deepseq
      , criterion        >= 1.5  && < 1.7
      , msgpack          >= 1.0  && < 1.1
      , cborg            >= 0.2  && < 0.3
    hs-source-dirs:   bench
    default-language: GHC2021
    ghc-options:      -O2
